name:                       haskell-dev-env
version:                    0.1.0.0
license:                    GPL-3
license-file:               LICENSE
author:                     Mariusz Szczepańczyk
maintainer:                 mszczepanczyk@gmail.com
category:                   Development
build-type:                 Simple
cabal-version:              == 1.18.0.8

executable haskell-dev-env
  main-is:                  Main.hs
  build-depends:            base >= 4.7 && < 4.8,
                            cabal-install == 1.18.0.8,
                            codex == 0.2.1.4,
                            haddock == 2.15.0.1,
                            hasktags == 0.69.0,
                            hdevtools == 0.1.0.6,
                            ghc-mod == 5.2.1.2,
                            gtk2hs-buildtools == 0.13.0.3,
                            leksah == 0.14.4.0,
                            stylish-haskell == 0.5.11.0
  default-language:         Haskell2010